--- a/client/src/app/bookanappointment/bookanappointment.component.html
+++ b/client/src/app/bookanappointment/bookanappointment.component.html
@@ -8,7 +8,7 @@
         <label for="exampleInputEmail1" class="form-label">Email address</label>
         <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
           name="username"
-          [(ngModel)]="model.username">
+          [(ngModel)]="model.email">
         <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
       </div>
 
